[package]
name = "mit_tools"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mit_tools"
crate-type = ["cdylib"]

[dependencies]
image = "0.24.6"
sha2 = "0.10.6"
walkdir = "2.3.3"
pyo3 = { version = "0.19.0", features = ["extension-module"] }